--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "0.3.0",
   "description": "A JavaScript proxy that returns Hyperapp vnodes.",
   "author": "Dustin Dowell <dustindowell2@gmail.com>",
-  "license": "MIT",
+  "license": "ISC",
   "main": "index.js"
 }
