--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html",
   "version": "0.3.0",
-  "description": "A JavaScript proxy that returns Hyperapp vnodes.",
+  "description": "A JavaScript proxy that returns virtual nodes.",
   "author": "Dustin Dowell <dustindowell2@gmail.com>",
   "license": "ISC",
   "main": "index.js"
